--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@
      cursor: pointer;
 
      color: #ffffff;
+     font-family: Georama;
      font-style: normal;
      font-weight: normal;
      font-size: 22px;
