--- a/style.css
+++ b/style.css
@@ -5,20 +5,27 @@
      src: url(fonts/Georama/Georama-Italic.ttf);
  }
 
+ * {
+     margin: 0;
+ }
 
  /* CORES NO MODO CLARO */
  :root {
-     --body-bg: #2C394B;
+     --primeira-tela-bg: #2C394B;
+     --segunda-tela-bg: #334756;
      --nav-bg: #FF5400;
-     --nav-text-color:#E5E5E5;
+     --nav-text-color: #E5E5E5;
      --text-color: #E5E5E5;
      --nav-hover: #FF5400;
+
  }
 
  /* CORES NO MODO ESCURO */
  .dark-mode:root {
-     --body-bg: #E5E5E5;
+     --primeira-tela-bg: #E5E5E5;
+     --segunda-tela-bg: #F4F4F4;
      --text-color: #2C394B;
+     --mode-icon: "\f185";
  }
 
  .noselect {
@@ -30,13 +37,11 @@
  }
 
  body {
-     background-color: var(--body-bg);
-     background-image: url(images/backgroundlejaum.png);
-     height: 1500px;
-     background-position: top;
-     background-repeat: no-repeat;
-     background-size: contain;
+     max-width: 100%;
+     overflow-x: hidden;
  }
+
+
 
  .navbar {
      position: sticky;
@@ -70,14 +75,14 @@
 
 
 
- @media (min-width: 992px) {
+ /* @media (min-width: 992px) {
      .navbar-expand-lg .navbar-nav .nav-link {
          padding-top: 0;
          padding-bottom: 0;
          padding-right: 1rem;
          padding-left: 1rem;
      }
- }
+ } */
 
  li .nav-link {
      font-family: Georama;
@@ -116,16 +121,51 @@
      font-weight: 500;
      font-size: 25px;
 
-     color: var(--text-color);
+     color: var(--nav-text-color);
 
      border-radius: 50px;
  }
 
- .container .comeco {
-     margin-top: 150px;
+ .darkmode-icon {
+     cursor: pointer;
+     display: flex;
+
+     font-size: 30px;
+     margin-right: 30px;
+     color: var(--text-color);
+
+     border: 3px solid var(--text-color);
+     border-radius: 40%;
+
+     padding: 10px;
  }
 
- .comeco .titulo {
+ .darkmode-icon:hover {
+     color: var(--nav-hover);
+     background-color: var(--text-color);
+
+     border: 3px solid var(--text-color);
+ }
+
+ #switch {
+     opacity: 0;
+     position: absolute;
+ }
+
+ .primeira-tela {
+     background-color: var(--primeira-tela-bg);
+     background-image: url(images/backgroundlejaum.png);
+     background-position: top;
+     background-repeat: no-repeat;
+     background-size: cover;
+
+ }
+
+ .primeira-tela .titulo {
+     margin-top: 98px;
+ }
+
+ .titulo {
      color: var(--nav-bg);
      font-family: Georama;
      font-weight: 500;
@@ -133,7 +173,7 @@
      text-decoration: line-through;
  }
 
- .comeco .titulo2 {
+ .titulo2 {
      margin-top: -30px;
      color: var(--nav-bg);
      font-family: Georama;
@@ -141,7 +181,7 @@
      font-size: 55px;
  }
 
- .comeco .subtitulo {
+ .subtitulo {
      color: var(--text-color);
 
      margin-top: 20px;
@@ -153,20 +193,12 @@
      letter-spacing: 1px;
  }
 
- .foguete {
-     position: sticky;
-     margin-left: 0px;
-     margin-top: 500px;
-     height: 600px;
- }
 
- .foguete:active {
-     position: relative;
-     top: 4px;
- }
 
  .btn-saibamais {
      margin-top: 30px;
+     margin-bottom: 120px;
+
      box-shadow: 0px 2px 35px 0px var(--nav-bg);
      background: linear-gradient(to bottom, var(--nav-bg), 5%, var(--nav-bg), 100%);
      background-color: var(--nav-bg);
@@ -174,9 +206,7 @@
      border: 0;
 
      cursor: pointer;
- }
 
- .btn-saibamais {
      color: var(--nav-text-color);
      font-family: Georama;
      font-style: normal;
@@ -186,6 +216,27 @@
      text-decoration: none;
  }
 
+ .btn-saibamais:active {
+     position: relative;
+     top: 4px;
+ }
+
+ .foguete {
+     margin-top: 700px;
+     height: 600px;
+ }
+
+ .foguete:active {
+     position: relative;
+     top: 4px;
+ }
+
+ .posicao-foguete {
+     position: absolute;
+     display: flex;
+     justify-content: end;
+     margin-left: 750px;
+ }
 
  /* TESTE DE ANIMAÇÃO COM SCROLL DO FOGUETE */
  .gira {
@@ -198,7 +249,7 @@
  }
 
  .sobe {
-     animation: sobe-de-lado 0.4s linear infinite;
+     animation: sobe-de-lado 0.5s linear infinite;
      animation-play-state: paused;
      animation-delay: calc(var(--scroll) * -1s);
 
@@ -208,12 +259,70 @@
 
  @keyframes sobe-de-lado {
      to {
-         transform: translate(100%, -1200px);
+         transform: translate(300px, -1200px);
      }
  }
 
  @keyframes rotate {
      to {
-         transform: rotate(-45deg);
+         transform: rotate(-30deg);
      }
+ }
+
+ /* ---------------------------- */
+ /* SEGUNDA TELA */
+ /* ---------------------------- */
+
+ .segunda-tela {
+     padding-top: 300px;
+     background-color: var(--segunda-tela-bg);
+ }
+
+ .segunda-tela .btn-saibamais {
+     margin-bottom: 100px;
+ }
+
+ .subtitulo-bold {
+     color: var(--text-color);
+
+     margin-top: 20px;
+
+     font-family: Georama;
+     font-style: normal;
+     font-weight: 700;
+     font-size: 27.5px;
+     letter-spacing: 1px;
+ }
+
+ .conteudo {
+     color: var(--text-color);
+
+     margin-top: 20px;
+     font-family: Georama;
+     font-style: normal;
+     font-weight: 500;
+     font-size: 20px;
+     letter-spacing: 1.1px;
+ }
+
+ .posicao-grafico {
+     position: absolute;
+     display: flex;
+     justify-content: end;
+
+     margin-left: 800px;
+     margin-top: -400px;
+ }
+
+ .grafico {
+     height: 450px;
+ }
+
+ .grafico:active {
+     position: relative;
+     top: 4px;
+ }
+
+ .espaco-em-baixo {
+     padding-bottom: 150px;
  }
