--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
  }
 
  body {
-     font-family: Georama;
+     font-family: Georama-Regular;
      max-width: 100%;
      overflow-x: hidden;
  }
