--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@
  }
 
  .navbar-toggler {
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-weight: 500;
      font-size: 25px;
 
@@ -168,7 +168,7 @@
 
  .titulo {
      color: var(--nav-bg);
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-weight: 500;
      font-size: 55px;
      text-decoration: line-through;
@@ -177,7 +177,7 @@
  .titulo2 {
      margin-top: -30px;
      color: var(--nav-bg);
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-weight: 900;
      font-size: 55px;
  }
@@ -187,7 +187,7 @@
 
      margin-top: 20px;
 
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-style: normal;
      font-weight: 500;
      font-size: 27.5px;
@@ -209,7 +209,7 @@
      cursor: pointer;
 
      color: var(--nav-text-color);
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-style: normal;
      font-weight: normal;
      font-size: 25px;
@@ -287,7 +287,7 @@
 
      margin-top: 20px;
 
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-style: normal;
      font-weight: 700;
      font-size: 27.5px;
@@ -298,7 +298,7 @@
      color: var(--text-color);
 
      margin-top: 20px;
-     font-family: Georama;
+     font-family: Georama-Regular;
      font-style: normal;
      font-weight: 500;
      font-size: 20px;
