--- a/style.css
+++ b/style.css
@@ -101,7 +101,9 @@
   .navbar {
     box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.25);
     background-color: #fff;
-    
+    position: absolute;
+   width: 100%;
+   z-index: 1;
   }
 
   .navbar .navbar__wrapper {
