--- a/style.css
+++ b/style.css
@@ -1,398 +1,391 @@
  @font-face {
-     font-family: Georama-Regular;
-     src: url(fonts/Georama/Georama-Regular.ttf);
-     font-family: Georama-Italico;
-     src: url(fonts/Georama/Georama-Italic.ttf);
+   font-family: Georama-Regular;
+   src: url(fonts/Georama/Georama-Regular.ttf);
+   font-family: Georama-Italico;
+   src: url(fonts/Georama/Georama-Italic.ttf);
  }
 
  * {
-     margin: 0;
+   margin: 0;
  }
 
  /* CORES NO MODO CLARO */
  :root {
-     --primeira-tela-bg: #2C394B;
-     --segunda-tela-bg: #334756;
-     --nav-bg: #FF5400;
-     --nav-text-color: #E5E5E5;
-     --text-color: #E5E5E5;
-     --nav-hover: #FF5400;
+   --primeira-tela-bg: #2C394B;
+   --segunda-tela-bg: #334756;
+   --nav-bg: #FF5400;
+   --nav-text-color: #E5E5E5;
+   --text-color: #E5E5E5;
+   --nav-hover: #FF5400;
 
  }
 
  /* CORES NO MODO ESCURO */
  .dark-mode:root {
-     --primeira-tela-bg: #E5E5E5;
-     --segunda-tela-bg: #F4F4F4;
-     --text-color: #2C394B;
-     --mode-icon: "\f185";
+   --primeira-tela-bg: #E5E5E5;
+   --segunda-tela-bg: #F4F4F4;
+   --text-color: #2C394B;
+   --mode-icon: "\f185";
  }
 
  .noselect {
-     -webkit-user-select: none;
-     -khtml-user-select: none;
-     -moz-user-select: none;
-     -o-user-select: none;
-     user-select: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -o-user-select: none;
+   user-select: none;
  }
 
  body {
-     max-width: 100%;
-     overflow-x: hidden;
+   font-family: Georama-Regular;
+   max-width: 100%;
+   overflow-x: hidden;
  }
 
 
-/*  
+ /*  
  ----------------------------------
     NAVBAR
  ----------------------------------
  */
 
-.navbar-responsive {
-    color: #fff;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    transform: translate3d(-100%, 0, 0);
-    transition: 0.3s all ease-in-out;
-    
-  }
+ .navbar-responsive {
+   color: #fff;
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   transform: translate3d(-100%, 0, 0);
+   transition: 0.3s all ease-in-out;
+ }
 
-  .navbar-responsive .navbar-responsive__nav {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    list-style: none;
-    
-  }
+ .navbar-responsive .navbar-responsive__nav {
+   display: flex;
+   flex-direction: column;
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+   list-style: none;
+ }
 
-  .navbar-responsive .navbar-responsive__nav .navbar-responsive__link {
-      text-align: center;
-      letter-spacing: 2px;
-      
-    }
+ .navbar-responsive .navbar-responsive__nav .navbar-responsive__link {
+   text-align: center;
+   letter-spacing: 2px;
+ }
 
-    .navbar-responsive .navbar-responsive__nav .navbar-responsive__link a {
-        display: block;
-        padding: 15px;
-        color: #fff;
-        text-decoration: none;
-      }
-      .navbar-responsive .navbar-responsive__nav .navbar-responsive__link a:after {
-        top: 50%;
-        bottom: 0;
-        left: 0;
-        background-color: #fff;
-      }
+ .navbar-responsive .navbar-responsive__nav .navbar-responsive__link a {
+   display: block;
+   padding: 15px;
+   color: #fff;
+   text-decoration: none;
+ }
 
-  .navbar-responsive:after {
-    content: "";
-    z-index: -1;
-    left: 0;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .navbar {
-    box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.25);
-    background-color: #fff;
-    position: absolute;
+ .navbar-responsive .navbar-responsive__nav .navbar-responsive__link a:after {
+   top: 50%;
+   bottom: 0;
+   left: 0;
+   background-color: #fff;
+ }
+
+ .navbar-responsive:after {
+   content: "";
+   z-index: -1;
+   left: 0;
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   background-color: rgba(0, 0, 0, 0.8);
+ }
+
+ .navbar {
+   box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.25);
+   background-color: var(--nav-bg);
+   position: absolute;
    width: 100%;
    z-index: 1;
-  }
+ }
 
-  .navbar .navbar__wrapper {
-    width: 90%;
-    margin: 0 auto;
-    
+ .navbar .navbar__wrapper {
+   width: 90%;
+   margin: 0 auto;
+ }
 
-    
-    
-  }
+ .navbar .navbar__wrapper .navbar__menu {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   height: 50px;
+ }
 
-  .navbar .navbar__wrapper .navbar__menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 50px;
-    
-  }
+ .navbar .navbar__wrapper .navbar__menu .navbar__nav {
+   display: flex;
+   justify-content: space-between;
+   list-style: none;
+ }
 
-  .navbar .navbar__wrapper .navbar__menu .navbar__nav {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-  }
+ .navbar .navbar__wrapper .navbar__link a,
+ .navbar__brand {
+   display: block;
+   position: relative;
+   padding: 12px;
+   color: #777;
+   letter-spacing: 0.1em;
+   text-decoration: none;
+ }
 
-  .navbar .navbar__wrapper .navbar__link a,
-    .navbar__brand {
-      display: block;
-      position: relative;
-      padding: 12px;
-      color: #777;
-      letter-spacing: 0.1em;
-      text-decoration: none;
-    }
+ .navbar .navbar__wrapper .navbar__brand {
+   color: var(--nav-text-color);
+   font-family: Georama-Italico;
+   font-weight: 700;
+   font-size: 2em;
+   line-height: 48px;
+ }
 
-    .navbar .navbar__wrapper .navbar__brand {
-        font-weight: 700;
-        font-size: 1.2em;
-        
-      }
+ .navbar .navbar__wrapper .navbar__brand img {
+   color: #fff;
+   height: 100%;
+ }
 
-      .navbar .navbar__wrapper .navbar__brand img {
-        height: 100%;
-      }
-  
-  .after-transform a {
-    position: relative;
+ .after-transform a {
+   position: relative;
+ }
 
-  
+ .after-transform a:after {
+   content: "";
+   transition: all 0.3s ease;
+   position: absolute;
+   bottom: -3px;
+   left: 0;
+   height: 2px;
+   width: 100%;
+   background-color: #2196f3;
+   border-radius: 3px;
+   transform: scaleX(0) translateZ(0);
+   transform-origin: bottom center;
+ }
 
-  }
+ .after-transform a.active,
+ :hover :after {
+   transform: scaleX(1) translateZ(0);
+ }
 
-  .after-transform a:after {
-    content: "";
-    transition: all 0.3s ease;
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    height: 2px;
-    width: 100%;
-    background-color: #2196f3;
-    border-radius: 3px;
-    transform: scaleX(0) translateZ(0);
-    transform-origin: bottom center;
-  }
 
-  .after-transform a.active,
-  :hover 
-    :after {
-      transform: scaleX(1) translateZ(0);
-    }
-  
-  
-  /* Icon 3 */
-  #nav-icon3 {
-    width: 30px;
-    height: calc(100% / 2);
-    position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-  }
-  
-  #nav-icon3 span {
-    display: none;
-    position: absolute;
-    height: 5px;
-    width: 100%;
-    background: #777;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
-    transition: 0.25s ease-in-out;
-  }
-  
-  #nav-icon3 span:nth-child(1) {
-    top: 0px;
-  }
-  
-  #nav-icon3 span:nth-child(2),
-  #nav-icon3 span:nth-child(3) {
-    top: 9px;
-  }
-  
-  #nav-icon3 span:nth-child(4) {
-    top: 18px;
-  }
-  
-  #nav-icon3.open span:nth-child(1) {
-    top: 9px;
-    width: 0%;
-    left: 50%;
-  }
-  
-  #nav-icon3.open span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-  
-  #nav-icon3.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-  
-  #nav-icon3.open span:nth-child(4) {
-    top: 9px;
-    width: 0%;
-    left: 50%;
-  }
-  
-  @media (max-width: 600px) {
-    .navbar__nav {
-      display: none !important;
-    }
-  
-    #nav-icon3 span {
-      display: block !important;
-    }
-  }
-  
-  @media (min-width: 600px) {
-    .navbar__responsive {
-      transform: translate3d(-100%, 0, 0) !important;
-    }
-  }
+ /* Icon 3 */
+ #nav-icon3 {
+   width: 30px;
+   height: calc(100% / 2);
+   position: relative;
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   -o-transform: rotate(0deg);
+   transform: rotate(0deg);
+   -webkit-transition: 0.5s ease-in-out;
+   -moz-transition: 0.5s ease-in-out;
+   -o-transition: 0.5s ease-in-out;
+   transition: 0.5s ease-in-out;
+   cursor: pointer;
+ }
 
-   /*  
+ #nav-icon3 span {
+   display: none;
+   position: absolute;
+   height: 5px;
+   width: 100%;
+   background: #777;
+   border-radius: 9px;
+   opacity: 1;
+   left: 0;
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   -o-transform: rotate(0deg);
+   transform: rotate(0deg);
+   -webkit-transition: 0.25s ease-in-out;
+   -moz-transition: 0.25s ease-in-out;
+   -o-transition: 0.25s ease-in-out;
+   transition: 0.25s ease-in-out;
+ }
+
+ #nav-icon3 span:nth-child(1) {
+   top: 0px;
+ }
+
+ #nav-icon3 span:nth-child(2),
+ #nav-icon3 span:nth-child(3) {
+   top: 9px;
+ }
+
+ #nav-icon3 span:nth-child(4) {
+   top: 18px;
+ }
+
+ #nav-icon3.open span:nth-child(1) {
+   top: 9px;
+   width: 0%;
+   left: 50%;
+ }
+
+ #nav-icon3.open span:nth-child(2) {
+   -webkit-transform: rotate(45deg);
+   -moz-transform: rotate(45deg);
+   -o-transform: rotate(45deg);
+   transform: rotate(45deg);
+ }
+
+ #nav-icon3.open span:nth-child(3) {
+   -webkit-transform: rotate(-45deg);
+   -moz-transform: rotate(-45deg);
+   -o-transform: rotate(-45deg);
+   transform: rotate(-45deg);
+ }
+
+ #nav-icon3.open span:nth-child(4) {
+   top: 9px;
+   width: 0%;
+   left: 50%;
+ }
+
+ @media (max-width: 600px) {
+   .navbar__nav {
+     display: none !important;
+   }
+
+   #nav-icon3 span {
+     display: block !important;
+   }
+ }
+
+ @media (min-width: 600px) {
+   .navbar__responsive {
+     transform: translate3d(-100%, 0, 0) !important;
+   }
+ }
+
+ /*  
  ----------------------------------
     PRIMEIRA TELA
  ----------------------------------
  */
 
  .primeira-tela {
-     background-color: var(--primeira-tela-bg);
-     background-image: url(images/backgroundlejaum.png);
-     background-position: top;
-     background-repeat: no-repeat;
-     background-size: cover;
+   background-color: var(--primeira-tela-bg);
+   background-image: url(images/backgroundlejaum.png);
+   background-position: top;
+   background-repeat: no-repeat;
+   background-size: cover;
 
  }
 
  .primeira-tela .titulo {
 
-     margin-top: 98px;
+   margin-top: 98px;
  }
 
  .titulo {
-    font-family: Georama-Regular;
+   font-family: Georama-Regular;
 
-     color: var(--nav-bg);
-     font-weight: 500;
-     font-size: 55px;
-     text-decoration: line-through;
+   color: var(--nav-bg);
+   font-weight: 500;
+   font-size: 55px;
+   text-decoration: line-through;
  }
 
  .titulo2 {
-    font-family: Georama-Regular;
+   font-family: Georama-Regular;
 
-     margin-top: -30px;
-     color: var(--nav-bg);
-     font-weight: 900;
-     font-size: 55px;
+   margin-top: -30px;
+   color: var(--nav-bg);
+   font-weight: 900;
+   font-size: 55px;
  }
 
  .subtitulo {
-    font-family: Georama-Regular;
+   font-family: Georama-Regular;
 
-     color: var(--text-color);
+   color: var(--text-color);
 
-     margin-top: 20px;
+   margin-top: 20px;
 
-     font-style: normal;
-     font-weight: 500;
-     font-size: 27.5px;
-     letter-spacing: 1px;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 27.5px;
+   letter-spacing: 1px;
  }
 
  .btn-saibamais {
-     margin-top: 30px;
-     margin-bottom: 120px;
+   margin-top: 30px;
+   margin-bottom: 120px;
 
-     box-shadow: 0px 2px 35px 0px var(--nav-bg);
-     background: linear-gradient(to bottom, var(--nav-bg), 5%, var(--nav-bg), 100%);
-     background-color: var(--nav-bg);
-     border-radius: 42px;
-     border: 0;
+   box-shadow: 0px 2px 35px 0px var(--nav-bg);
+   background: linear-gradient(to bottom, var(--nav-bg), 5%, var(--nav-bg), 100%);
+   background-color: var(--nav-bg);
+   border-radius: 42px;
+   border: 0;
 
-     cursor: pointer;
+   cursor: pointer;
 
-     color: var(--nav-text-color);
-     font-style: normal;
-     font-weight: normal;
-     font-size: 25px;
-     padding: 9px 23px;
-     text-decoration: none;
+   color: var(--nav-text-color);
+   font-style: normal;
+   font-weight: normal;
+   font-size: 25px;
+   padding: 9px 23px;
+   text-decoration: none;
  }
 
  .btn-saibamais:active {
-     position: relative;
-     top: 4px;
+   position: relative;
+   top: 4px;
  }
 
  .foguete {
-     margin-top: 700px;
-     height: 600px;
+   margin-top: 700px;
+   height: 600px;
  }
 
  .foguete:active {
-     position: relative;
-     top: 4px;
+   position: relative;
+   top: 4px;
  }
 
  .posicao-foguete {
-     position: absolute;
-     display: flex;
-     margin-left: 600px;
+   position: absolute;
+   display: flex;
+   margin-left: 600px;
  }
- 
-  /*  
+
+ /*  
  ----------------------------------
     ANIMAÇÃO COM SCROLL DO FOGUETE
  ----------------------------------
  */
 
  .gira {
-     animation: rotate 0.5s linear infinite;
-     animation-play-state: paused;
-     animation-delay: calc(var(--scroll) * -1s);
+   animation: rotate 0.5s linear infinite;
+   animation-play-state: paused;
+   animation-delay: calc(var(--scroll) * -1s);
 
-     animation-iteration-count: 1;
-     animation-fill-mode: both;
+   animation-iteration-count: 1;
+   animation-fill-mode: both;
  }
 
  .sobe {
-     animation: sobe-de-lado 0.5s linear infinite;
-     animation-play-state: paused;
-     animation-delay: calc(var(--scroll) * -1s);
+   animation: sobe-de-lado 0.5s linear infinite;
+   animation-play-state: paused;
+   animation-delay: calc(var(--scroll) * -1s);
 
-     animation-iteration-count: 1;
-     animation-fill-mode: both;
+   animation-iteration-count: 1;
+   animation-fill-mode: both;
  }
 
  @keyframes sobe-de-lado {
-     to {
-         transform: translate(300px, -1200px);
-     }
+   to {
+     transform: translate(300px, -1200px);
+   }
  }
 
  @keyframes rotate {
-     to {
-         transform: rotate(-30deg);
-     }
+   to {
+     transform: rotate(-30deg);
+   }
  }
 
  /*  
@@ -408,54 +401,54 @@
  */
 
  .segunda-tela {
-     padding-top: 300px;
-     background-color: var(--segunda-tela-bg);
+   padding-top: 300px;
+   background-color: var(--segunda-tela-bg);
  }
 
  .subtitulo-bold {
-     color: var(--text-color);
+   color: var(--text-color);
 
 
-     margin-top: 20px;
+   margin-top: 20px;
 
-     font-family: Georama-Regular;
-     font-style: normal;
-     font-weight: 700;
-     font-size: 27.5px;
-     letter-spacing: 1px;
+   font-family: Georama-Regular;
+   font-style: normal;
+   font-weight: 700;
+   font-size: 27.5px;
+   letter-spacing: 1px;
  }
 
  .conteudo {
-     color: var(--text-color);
+   color: var(--text-color);
 
-     margin-top: 20px;
-     font-family: Georama-Regular;
-     font-style: normal;
-     font-weight: 500;
-     font-size: 20px;
-     letter-spacing: 1.1px;
+   margin-top: 20px;
+   font-family: Georama-Regular;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 20px;
+   letter-spacing: 1.1px;
  }
 
  .posicao-grafico {
-     position: absolute;
-     display: flex;
-     justify-content: end;
+   position: absolute;
+   display: flex;
+   justify-content: end;
 
-     margin-left: 800px;
-     margin-top: -400px;
+   margin-left: 800px;
+   margin-top: -400px;
  }
 
  .grafico {
-     height: 450px;
+   height: 450px;
  }
 
  .grafico:active {
-     position: relative;
-     top: 4px;
+   position: relative;
+   top: 4px;
  }
 
  .espaco-em-baixo {
-     padding-bottom: 150px;
+   padding-bottom: 150px;
  }
 
 
