--- a/style.css
+++ b/style.css
@@ -84,19 +84,17 @@
  }
 
  .navbar-responsive .navbar-responsive__nav .navbar-responsive__link button {
-  box-shadow: 0px 2px 20px 0px var(--nav-bg);
-  background: linear-gradient(to bottom, var(--nav-bg), 5%, var(--nav-bg), 100%);
-  background-color: var(--nav-bg);
-  border-radius: 20px;
-  border: 0;
+   background-color: var(--nav-bg);
+   border-radius: 20px;
+   border: 0;
+   box-shadow: 0px 2px 10px var(--nav-bg), 0px 2px 5px black;
+   cursor: pointer;
 
-  cursor: pointer;
-
-  color: var(--nav-text-color);
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  padding: 9px 10px;
+   color: var(--nav-text-color);
+   font-style: normal;
+   font-weight: normal;
+   font-size: 20px;
+   padding: 9px 10px;
  }
 
  .navbar-responsive .navbar-responsive__nav .navbar-responsive__link a:after {
@@ -109,11 +107,11 @@
  label {
    font-size: 30px;
  }
+
  .navbar-responsive .navbar-responsive__nav .navbar-responsive__link .darkmode-icon {
    cursor: pointer;
    color: var(--text-color);
-   border: 3px solid var(--text-color);
-   border-radius: 40%;
+
  }
 
  .navbar-responsive .navbar-responsive__nav .navbar-responsive__link .darkmode-icon:hover {
@@ -138,8 +136,9 @@
    width: 100%;
    z-index: 1;
 
-   box-shadow: 0px 2px 35px var(--nav-bg);
+   box-shadow: 0px 2px 35px var(--nav-bg), 0px 2px 5px black;
    background: var(--nav-bg);
+   padding: 0;
  }
 
  .navbar .navbar__wrapper {
@@ -164,19 +163,20 @@
 
  .navbar .navbar__wrapper .navbar__link a,
  .navbar__brand {
+   /* box-shadow: 0px 2px 35px var(--nav-bg), 0px 0px 2px black; */
    position: relative;
-   padding: 10px;
+   padding: 2px 10px 2px 10px;
 
    color: var(--nav-text-color);
    font-family: Georama;
    font-size: 1em;
    font-weight: 500;
-   letter-spacing: 0.1em;
+   /* letter-spacing: 0.1em; */
    text-decoration: none;
 
-   border: 3px solid var(--nav-text-color);
+   border: 1px solid var(--nav-text-color);
    border-radius: 50px;
-   margin-left: 10px;
+   margin-left: 20px;
  }
 
  .navbar .navbar__wrapper .navbar__brand {
@@ -184,17 +184,20 @@
    font-family: Georama-Italico;
    font-weight: 500;
    font-size: 2.3em;
-   line-height: 48px;
+   /* line-height: 48px; */
 
+   box-shadow: none;
    border: none;
    margin: 0px;
  }
 
  .navbar .navbar__wrapper .navbar__menu .navbar__nav .darkmode-icon {
+   box-shadow: 0px 2px 35px var(--nav-bg), 0px 0px 2px black;
+
    cursor: pointer;
    display: inline-flex;
 
-   font-size: 30px;
+   font-size: 20px;
    color: var(--text-color);
    border: 3px solid var(--text-color);
    border-radius: 40%;
@@ -257,7 +260,7 @@
    position: absolute;
    height: 5px;
    width: 100%;
-   background: #777;
+   background: var(--nav-text-color);
    border-radius: 9px;
    opacity: 1;
    left: 0;
@@ -310,34 +313,6 @@
    left: 50%;
  }
 
- @media (max-width: 600px) {
-
-   .foguete,
-   .grafico {
-     display: none !important;
-   }
-
-   .primeira-tela .titulo,
-   .primeira-tela .titulo2 {
-     font-size: 3em;
-     line-height: 1.2em;
-   }
-
-   .navbar__nav {
-     display: none !important;
-   }
-
-   #nav-icon3 span {
-     display: block !important;
-   }
- }
-
- @media (min-width: 600px) {
-   .navbar__responsive {
-     transform: translate3d(-100%, 0, 0) !important;
-   }
- }
-
 
 
  /*  
@@ -352,11 +327,10 @@
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
-
+   height: 100vh;
  }
 
  .primeira-tela .titulo {
-
    margin-top: 98px;
  }
 
@@ -372,7 +346,6 @@
  .titulo2 {
    font-family: Georama;
 
-   margin-top: -30px;
    color: var(--nav-bg);
    font-weight: 900;
    font-size: 55px;
@@ -393,9 +366,9 @@
 
  .btn-saibamais {
    margin-top: 30px;
-   margin-bottom: 120px;
 
-   box-shadow: 0px 2px 35px 0px var(--nav-bg);
+   box-shadow: 0px 2px 35px var(--nav-bg), 0px 2px 5px black;
+   /* box-shadow: 0px 2px 35px 0px var(--nav-bg); */
    background: linear-gradient(to bottom, var(--nav-bg), 5%, var(--nav-bg), 100%);
    background-color: var(--nav-bg);
    border-radius: 42px;
@@ -406,7 +379,7 @@
    color: var(--nav-text-color);
    font-style: normal;
    font-weight: normal;
-   font-size: 25px;
+   font-size: 20px;
    padding: 9px 23px;
    text-decoration: none;
  }
@@ -439,7 +412,7 @@
  */
 
  .gira {
-   animation: rotate 0.5s linear infinite;
+   animation: rotate 0.2s linear infinite;
    animation-play-state: paused;
    animation-delay: calc(var(--scroll) * -1s);
 
@@ -448,7 +421,7 @@
  }
 
  .sobe {
-   animation: sobe-de-lado 0.5s linear infinite;
+   animation: sobe-de-lado 0.2s linear infinite;
    animation-play-state: paused;
    animation-delay: calc(var(--scroll) * -1s);
 
@@ -481,13 +454,13 @@
  */
 
  .segunda-tela {
-   padding-top: 200px;
+   padding-top: 50px;
    background-color: var(--segunda-tela-bg);
+   height: 100vh;
  }
 
  .subtitulo-bold {
    color: var(--text-color);
-
 
    margin-top: 20px;
 
@@ -537,3 +510,72 @@
     TENTANDO FAZER A TAL DA RESPONSIVIDADE
  ----------------------------------
  */
+
+ /*  MOBILE (MENOS DE 600PX) */
+ @media (max-width: 600px) {
+
+   .foguete,
+   .grafico {
+     display: none !important;
+   }
+
+   .navbar .navbar__wrapper .navbar__brand {
+     font-size: 30px;
+   }
+
+   .navbar__nav {
+     display: none !important;
+   }
+
+   .titulo,
+   .titulo2 {
+     font-size: 38px;
+     line-height: 1.2em;
+   }
+
+   .primeira-tela .subtitulo {
+     font-size: 20px;
+     line-height: 1em;
+   }
+
+   .subtitulo-bold {
+     font-size: 20px;
+   }
+
+   .conteudo {
+     font-size: 15px;
+   }
+
+
+   #nav-icon3 span {
+     display: block !important;
+   }
+ }
+
+ @media (min-width: 600px) {
+   .navbar__responsive {
+     transform: translate3d(-100%, 0, 0) !important;
+   }
+ }
+
+ /*  DESKTOP 720P*/
+ @media (min-width: 1300px) {
+   .navbar {
+     height: 60px;
+   }
+
+   .primeira-tela .titulo,
+   .primeira-tela .titulo2 {
+     font-size: 48px;
+   }
+
+   .primeira-tela .subtitulo {
+     font-size: 27px;
+     line-height: 1em;
+   }
+
+   .navbar .navbar__wrapper .navbar__brand {
+     font-size: 30px;
+   }
+
+ }
