--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@
    height: 345.6px;
    margin-top: 30px;
    margin-right: 10px;
-   border-radius: 5px;
+   /* border-radius: 5px; */
    counter-increment: carousel-cell;
    display: flex;
    align-items: flex-end;
