--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
  @font-face {
    font-family: Georama;
    src: url(fonts/Georama/Georama-Regular.ttf);
+ }
+
+ @font-face {
    font-family: Georama-Italico;
    src: url(fonts/Georama/Georama-Italic.ttf);
  }
@@ -39,7 +42,7 @@
  }
 
  body {
-   max-width: 100%;
+   max-width: 100vw;
    overflow-x: hidden;
  }
 
@@ -941,14 +944,14 @@
    }
 
    .quarta-tela .flickity-page-dots .dot {
-    width: 10px;
-    height: 10px;
-  }
+     width: 10px;
+     height: 10px;
+   }
 
-  .quarta-tela .flickity-prev-next-button {
-    width: 50px;
-    height: 50px;
-  }
+   .quarta-tela .flickity-prev-next-button {
+     width: 50px;
+     height: 50px;
+   }
 
    #nav-icon3 span {
      display: block !important;
